# Math-for-Programmers

./: pyproject.toml  日记.md
2/: 2.ipynb
start/: start.ipynb
