[project]
name = "MathforProgrammers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dingjianzhong", email = "dinger2dinger@gmail.com"},
]
dependencies = ["ipykernel>=6.29.5", "matplotlib>=3.9.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
